fix spacing of parameters

--- a/app/web/src/styles.css
+++ b/app/web/src/styles.css
@@ -189,8 +189,7 @@ button {
 	border: 0.1rem solid black;
 	border-bottom-left-radius: 0.2rem;
 	border-bottom-right-radius: 0.2rem;
-	padding: 0.5rem;
-	padding-top: 0;
+	padding: 0 0.5rem 0.5rem 0.5rem;
 	transition: border linear 100ms;
 	width: 10rem;
 	transform: translate(-50%, -50%);
@@ -358,7 +357,7 @@ main.selection-drag .connector:hover:before {
 .numparam input,
 .radioparam select {
 	font-size: 0.75rem;
-	max-width: 50%;
+	width: 4rem;
 	font-weight: 400;
 }
 
